# playground

./: .gitignore  LICENSE  README.md  docker-compose.yaml  todo  todo.md
astro-client/: .gitignore  README.md  astro.config.mjs  package.json
astro-client/scripts/: syncPokemon.ts
hono-server/: package.json
hono-server/src/: get-random-no-exclude-range.test.ts  get-random-no-exclude-range.ts  index.ts  storage.ts
java-server/: Dockerfile  README.md  pom.xml
lit-client/: LICENSE  index.html  package.json  tsconfig.json
lit-client/.storybook/: preview-head.html
lit-client/src/: home-page.ts  lit-client.ts  pokemon-card.ts  sprite-carousel.ts  type-badge.ts
lit-client/stories/: pokemon-card.stories.ts  type-badge.stories.ts
lit-client/test/: lit-client.test.ts  type-badge.test.ts
mantine-client/: flake.nix  jest.config.ts  package.json  tsconfig.app.json
mantine-client/.storybook/: main.ts  preview.tsx
mantine-client/src/: App.tsx  header.module.css  header.tsx  herotext.module.css  herotext.tsx  (+1 more)
react-client/: .gitignore  biome.json  eslint.config.js  matchers.d.ts  package.json  testing-library.ts  tsconfig.app.json
remix-client/: README.md  TEST_SUITE.md  flake.nix  package.json  vite.config.ts  vitest.config.ts
rust-client/: Cargo.toml  flake.nix
rust-client/src/: api.rs  main.rs  types.rs
rust-server/: Cargo.toml  Dockerfile  flake.nix  readme.md
rust-server/src/: lib.rs  main.rs
rust-server/src/storage/: bulbasaur_sprites.json  mod.rs  pokemon_box.rs
rust-server/tests/: pokebox_api.rs
svelt-client/: flake.nix  package.json
(+1097 files in other folders)
