[package]
name = "rust-client"
version = "0.1.0"
edition = "2024"

[dependencies]
rustemon = { version = "4.2.0", features = ["serialize"] }
ratatui = "0.26"
crossterm = "0.27"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"