[package]
name = "rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rustemon = { version = "4.2.0", features = ["serialize"] }
mongodb = "3.0.1"
futures = "0.3.30"
serde = "1.0.204"
rand = "0.9.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
async-trait = "0.1.88"
openssl = { version = "0.10", features = ["vendored"]}

[dev-dependencies]
rocket = { version = "0.5.1", features = ["json"]}
serde_json = "1.0"
mongodb = "3.0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}

